--- a/index.html
+++ b/index.html
@@ -107,19 +107,20 @@
                 </div>
             </div>
         </div>
+
         <!-- Pop-Up Modal for Contact Details -->
-<div id="contactPopup" class="popup-overlay">
-    <div class="popup-content">
-        <span class="close-popup">&times;</span>
-        <h2>Contact Us to Book Your Tour</h2>
-        <p>We're excited to help you plan your adventure with The Roar Kingdom!</p>
-        <ul class="contact-details">
-            <li><strong>Email:</strong> <a href="mailto:bookings@theroarkingdom.com">bookings@theroarkingdom.com</a></li>
-            <li><strong>Phone:</strong> <a href="tel:+91-07947434830">+91-07947434830</a></li>
-            <li><strong>Instagram:</strong> <a href="https://www.instagram.com/theroarkingdom" target="_blank">@theroarkingdom</a></li>
-        </ul>
-    </div>
-</div>
+        <div id="contactPopup" class="popup-overlay">
+            <div class="popup-content">
+                <span class="close-popup" onclick="closePopup()">&times;</span>
+                <h2>Contact Us to Book Your Tour</h2>
+                <p>We're excited to help you plan your adventure with The Roar Kingdom!</p>
+                <ul class="contact-details">
+                    <li><strong>Email:</strong> <a href="mailto:bookings@theroarkingdom.com">bookings@theroarkingdom.com</a></li>
+                    <li><strong>Phone:</strong> <a href="tel:+91-07947434830">+91-07947434830</a></li>
+                    <li><strong>Instagram:</strong> <a href="https://www.instagram.com/theroarkingdom" target="_blank">@theroarkingdom</a></li>
+                </ul>
+            </div>
+        </div>
     </div>
 </section>
 
